Bug 223470 - Unread count not displayed behind folder name anymore
Summary: Unread count not displayed behind folder name anymore
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: folders (other bugs)
Version First Reported In: 1.99.0
Platform: Unlisted Binaries Linux
: LO normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords: akonadi-ports-regression
Depends on:
Blocks:
 
Reported: 2010-01-19 21:24 UTC by Thomas McGuire
Modified: 2011-06-14 00:45 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Thomas McGuire 2010-01-19 21:24:43 UTC
When disabling the unread column in the folder list, the unread count should be displayed in the folder name, like "inbox (10)". Folders with unread mail should be displayed in bold.
Comment 1 Thomas McGuire 2010-01-26 18:23:49 UTC
This is model related, so adding Steve to the CC list.

Note that we actually have Akonadi::CollectionStatisticsDelegate, but it is not used here, and I don't know if it works with EntityTreeModel.
Comment 2 Stephen Kelly 2010-02-02 18:17:34 UTC
SVN commit 1084192 by skelly:

Use the CollectionStatisticsDelegate in the FolderTreeView.

BUG: 223470

 M  +8 -0      foldertreeview.cpp  
 M  +7 -0      foldertreeview.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1084192
Comment 3 Fabio Rossi 2011-06-14 00:45:06 UTC
I'm using kmail 2.1.0 but the folder name is not bold as in kmail 1.x