Use the CollectionStatisticsDelegate in the FolderTreeView.

BUG: 223470

svn path=/trunk/KDE/kdepim/kmail/; revision=1084192